17-3-7 Signed-off-by: gaofeng <gaofeng3695@126.com>

--- a/src/css/jasxxws.css
+++ b/src/css/jasxxws.css
@@ -142,10 +142,11 @@ ul.alert-dropdown {
         width: 200px;
     }
     .side-nav li a:hover,
-    .side-nav li a:focus {
+    .side-nav li a.active {
         outline: none;
         background-color: #000 !important;
     }
+
 }
 
 .side-nav>li>ul {
