--- a/src/sass/enroll.scss
+++ b/src/sass/enroll.scss
@@ -1,25 +1,25 @@
 .forgotPassword {
     .bottom1 {
         width: 760px;
-        height: 171px;
+        // height: 171px;
         display: none;
         margin-top: 60px;
     }
     .bottom2 {
         width: 760px;
-        height: 228px;
+        // height: 228px;
         display: none;
         margin-top: 60px;
     }
     .bottom3 {
         width: 760px;
-        height: 200px;
+        // height: 200px;
         display: none;
         margin-top: 60px;
     }
     .bottom4 {
         width: 100%;
-        height: 240px;
+        // height: 240px;
         display: none;
         .finish {
             width: 84px;
