--- a/src/sass/loginCommon.scss
+++ b/src/sass/loginCommon.scss
@@ -12,7 +12,7 @@ html {
     width: 100%;
     min-width: 760px;
     height: 100%;
-    min-height: 750px;
+    min-height: 660px;
     position: relative;
     overflow-x: hidden;
     overflow-y: hidden;
@@ -21,102 +21,129 @@ html {
 .forgotPassword {
     width: 100%;
     height: 100%;
-    background: url(../images/forgetImg/forgetbg.png) repeat-x;
+    background: url(/src/images/forgetImg/forgetbg.png) repeat 0 center;
     background-size: auto 100%;
-    .title {
+    .zhuce {
         width: 760px;
-        height: 40px;
-        margin: 0 auto;
-        .logobg {
-            width: 170px;
-            height: 110px;
-            float: left;
-            background: url(../images/forgetImg/logo.png) no-repeat 0 70px;
-        }
-        .font {
-            width: 100px;
-            height: 30px;
-            float: left;
-            margin-left: 20px;
-            padding-left: 20px;
-            margin-top: 75px;
-            line-height: 30px;
-            border-left: 2px solid #fff;
-            font-size: 24px;
-            color: #fff;
-            font-weight: bold;
-        }
-    }
-    .poskuai {
-        width: 760px;
-        height: 520px;
-        margin: 0 auto;
-        margin-top: 90px;
-        background: #fff;
-        border-radius: 10px;
-        -webkit-box-shadow: 0px 20px 70px rgba(0, 0, 0, .5);
-        -moz-box-shadow: 0px 20px 70px rgba(0, 0, 0, .5);
-        box-shadow: 0px 20px 70px rgba(0, 0, 0, .4);
-        .top {
-            width: 720px;
-            height: 80px;
-            border-bottom: 1px solid #DDD;
-            text-align: center;
-            img {
-                margin-top: 20px;
+        height: 550px;
+        // margin: auto;
+        // background: red;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -30%);
+        .title {
+            width: 760px;
+            height: 40px;
+            margin: 0 auto;
+            .logobg {
+                width: 170px;
+                height: 40px;
+                float: left;
+                background: url(../images/forgetImg/logo.png) no-repeat 0 0;
             }
-        }
-        .Contain span {
-            color: #E52027;
-            padding-right: 5px;
-        }
-        // 共用样式开始
-        .one {
-            width: 100%;
-            height: 35px;
-            margin-bottom: 20px;
-            .left1 {
-                width: 228px;
-                height: 35px;
-                line-height: 35px;
-                text-align: right;
-            }
-            .center1 input {
-                width: 300px;
-                height: 35px;
-                border: 1px solid #bbb;
-                border-radius: 5px;
-                outline: none;
-                padding-left: 5px;
-            }
-            .center1 .styles {
-                position: absolute;
-                right: 3px;
-                top: 3px;
-                width: 110px;
-                height: 32px;
-                border: none;
-                border-radius: 5px;
-                background: #49CB86;
+            .font {
+                width: 100px;
+                height: 30px;
+                float: left;
+                margin-left: 20px;
+                margin-top: 5px;
+                padding-left: 20px;
+                // margin-top: 75px;
+                line-height: 30px;
+                border-left: 2px solid #fff;
+                font-size: 24px;
                 color: #fff;
-                outline: none;
-                cursor: pointer;
+                font-weight: bold;
             }
-            .right1 {
-                width: 210px;
-                height: 35px;
-                display: none;
-                line-height: 35px;
-                margin-left: 10px;
-                font-size: 14px;
-                color: #FF3935;
-                text-align: left;
-                background: url(../images/forgetImg/warning.png) no-repeat 0 center;
-                span {
-                    display: block;
-                    margin-left: 20px;
+        }
+        .poskuai {
+            width: 760px;
+            height: 500px;
+            margin: 0 auto;
+            margin-top: 20px;
+            background: #fff;
+            border-radius: 10px;
+            -webkit-box-shadow: 0px 20px 70px rgba(0, 0, 0, .5);
+            -moz-box-shadow: 0px 20px 70px rgba(0, 0, 0, .5);
+            box-shadow: 0px 20px 70px rgba(0, 0, 0, .4);
+            .top {
+                width: 720px;
+                height: 80px;
+                border-bottom: 1px solid #DDD;
+                text-align: center;
+                img {
+                    margin-top: 20px;
                 }
             }
+            .Contain span {
+                color: #E52027;
+                padding-right: 5px;
+            }
+            // 共用样式开始
+            .one {
+                width: 100%;
+                height: 35px;
+                margin-bottom: 20px;
+                .left1 {
+                    width: 228px;
+                    height: 35px;
+                    line-height: 35px;
+                    text-align: right;
+                }
+                .center1 input {
+                    width: 300px;
+                    height: 35px;
+                    border: 1px solid #bbb;
+                    border-radius: 5px;
+                    outline: none;
+                    padding-left: 5px;
+                }
+                .center1 .styles {
+                    position: absolute;
+                    right: 3px;
+                    top: 3px;
+                    width: 110px;
+                    height: 32px;
+                    border: none;
+                    border-radius: 5px;
+                    background: #49CB86;
+                    color: #fff;
+                    outline: none;
+                    cursor: pointer;
+                }
+                .right1 {
+                    width: 210px;
+                    height: 35px;
+                    display: none;
+                    line-height: 35px;
+                    margin-left: 10px;
+                    font-size: 14px;
+                    color: #FF3935;
+                    text-align: left;
+                    background: url(../images/forgetImg/warning.png) no-repeat 0 center;
+                    span {
+                        display: block;
+                        margin-left: 20px;
+                    }
+                }
+            }
+        }
+    }
+    .words {
+        width: 100%;
+        text-align: center;
+        font-size: 14px;
+        color: #666;
+        position: absolute;
+        left: 50%;
+        bottom: 30px;
+        transform: translateX(-50%);
+        span {
+            vertical-align: middle;
+            font-size: 26px;
+            margin-left: 5px;
+            margin-right: 5px
         }
     }
 }
@@ -185,24 +212,6 @@ html {
             display: block;
             margin-left: 20px;
         }
-    }
-}
-
-.words {
-    min-width: 760px;
-    // background: red;
-    text-align: center;
-    font-size: 14px;
-    color: #666;
-    position: absolute;
-    left: 50%;
-    bottom: 20px;
-    transform: translateX(-50%);
-    span {
-        vertical-align: middle;
-        font-size: 26px;
-        margin-left: 5px;
-        margin-right: 5px
     }
 }
 
