--- a/src/sass/loginSet.scss
+++ b/src/sass/loginSet.scss
@@ -27,7 +27,7 @@
                 cursor: pointer;
                 -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                 filter: alpha(opacity=0);
-                width: 100%;
+                // width: 100%;
                 height: 100%;
                 display: inline-block;
             }
@@ -72,7 +72,7 @@
                 cursor: pointer;
                 -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                 filter: alpha(opacity=0);
-                width: 100%;
+                // width: 100%;
                 height: 100%;
                 display: inline-block;
             }
