--- a/src/sass/topnav.scss
+++ b/src/sass/topnav.scss
@@ -1,11 +1,16 @@
 .photoImg {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    line-height: 30px;
+    width: 100%;
+    height: 50px;
     img {
         width: 30px;
         height: 30px;
         border-radius: 50%;
+    }
+    .userName {
+        // display: block;
+        line-height: 30px;
+        margin-top: 2px;
+        color: #fff;
     }
 }
 
@@ -40,27 +45,29 @@
 }
 
 .help {
-    width: 50px;
+    float: left;
+    width: 52px;
     height: 30px;
-    text-align: center;
-    line-height: 30px;
-    margin: 10px 0;
-    border-left: 1px solid #000;
-    background: url(/src/images/main/help.png) 15px 6px no-repeat;
-    background-size: 18px 18px;
     cursor: pointer;
-}
-
-.signOut {
-    width: 50px;
-    height: 30px;
-    text-align: center;
-    line-height: 30px;
-    margin: 10px 0;
-    border-left: 1px solid #000;
-    background: url(/src/images/main/signOut.png) 15px 6px no-repeat;
-    background-size: 18px 18px;
-    cursor: pointer;
+    .leftLine {
+        margin-top: 10px;
+        height: 30px;
+        border-left: 1px solid #000;
+        float: left;
+    }
+    img {
+        width: 20px;
+        height: 20px;
+        margin-top: 6px;
+    }
+    h1 {
+        width: 240px;
+        display: block;
+        overflow: hidden;
+        word-break: keep-all;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
 }
 
 .new_company {
@@ -73,4 +80,13 @@
     img {
         margin-left: 5px;
     }
+}
+
+.showtitle {
+    width: 240px;
+    display: block;
+    overflow: hidden;
+    word-break: keep-all;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
